--- a/src/components/block_titlle/style.css
+++ b/src/components/block_titlle/style.css
@@ -1,6 +1,7 @@
 .title-block {
    display: flex;
    align-items: center;
+   margin-bottom: 20px;
 }
 .title-block__title {
    margin-right: 20px;
