--- a/src/index.css
+++ b/src/index.css
@@ -225,6 +225,9 @@ h6 {
    font-size: 30px;
    line-height: 39px;
 }
+.p{
+   font-size: 24px;
+}
 .old-price {
    font-weight: 500;
    font-size: 20px;
