--- a/src/pages/gallery/style.css
+++ b/src/pages/gallery/style.css
@@ -4,10 +4,16 @@
    grid-gap: 30px 30px;
 }
 .gallery-img-list__item{
+   max-width: 670px;
+   max-height: 670px;
    
 }
 .gallery-img-list__link{
 }
 .gallery-img-list__img{
+   /* width: 100%; */
    width: 100%;
+   height: 100%;
+   object-fit: cover;
+   border-radius: 25px;
 }
