--- a/src/pages/main/style.css
+++ b/src/pages/main/style.css
@@ -209,16 +209,21 @@ main {
 
 .block-works__item {
    max-width: 395px;
+   max-height: 410px;
    margin-right: 28px;
    gap: 10px;
 }
 
 .block-works__photo {
    width: 100%;
+   height: 100%;
 }
 
 .block-works__img {
-   max-width: 100%;
+   width: 395px;
+   height: 410px;
+   object-fit: cover;
+   border-radius: 25px;
 }
 
 .block-action__list-content-block{
