--- a/src/components/Header/style.css
+++ b/src/components/Header/style.css
@@ -1,6 +1,6 @@
 .block-header__main-column {
    margin: 30px 0px;
-   max-width: 100vw;
+   max-width: 100%;
 }
 
 .block-header__row {
@@ -12,7 +12,7 @@
    margin-bottom: 25px;
 }
 
-@media (max-width: 1023px) {
+/* @media (max-width: 1023px) {
    .block-header__row {
       display: flex;
       flex-wrap: wrap;
@@ -27,14 +27,17 @@
    .block-header__row ul {
       margin-bottom: 10px;
    }
-}
+} */
 
 .block-header__logo {
+   position: relative;
+   z-index: 4;
    margin-right: 5px;
    display: inline-block;
 }
 
 .block-header__group-items {
+   z-index: 4;
    display: flex;
    margin: 0px 5px;
    display: flex;
@@ -99,7 +102,7 @@
    font-weight: 500;
    font-size: 18px;
    line-height: 22px;
-   flex: 0 1 855px;
+   flex: 0 1 auto;
    align-items: center;
    justify-content: space-between;
 }
@@ -122,11 +125,11 @@
    margin-right: 45px;
 }
 
-@media (max-width: 1024px) {
+/* @media (max-width: 1024px) {
    .block-header__info-container {
       margin-right: 5px;
    }
-}
+} */
 
 .block-header__tel {
    margin-right: 5px;
@@ -221,21 +224,47 @@
    font-weight: 600;
 }
 
-.menu-active {
+.menu-activate {
    overflow: hidden;
 }
-
-@media (max-width: 732px) {
+.block-header__search-input-block span {
+   display: none;
+}
+@media (max-width: 1200px) {
+   
+   .block-header__row:first-child {
+      position: fixed;
+      top: 0;
+      left: 0;
+      z-index: 5;
+      width: 100vw;
+      height: 60px;
+      background: #fff;
+      overflow: hidden;
+      transition: all 0.5s ease 0s;
+      
+   }
+   .block-header__row:last-child {
+      margin-top: 80px;
+   }
    .block-header__info-container {
       flex-direction: column;
-      position: absolute;
-      z-index: 3;
+      position: fixed;
+      z-index: 5;
       top: 300px;
+      overflow: hidden;
       left: -100vw;
+      transition: all 0.5s ease 0s;
    }
-
-   .block-header__info-container.menu-active {
-      left: 10px;
+   .block-header__row.menu-activate{
+      height: 100vh;
+      transition: all 0.5s ease 0s;
+      overflow: hidden;
+   }
+   .block-header__info-container.menu-activate {
+      transition: all 0.5s ease 0.2s;
+      
+      left: 0px;
    }
 
    .block-header__tel {
@@ -258,28 +287,33 @@
       height: 100vh;
       left: -100vw;
       align-items: start;
-      padding-left: 10px;
-      top: 70px;
+      top: 0px;
+      padding: 70px 10px 0px 10px;
       background: #fff;
-      z-index: 3;
+      z-index: 0;
       flex-direction: column;
       justify-content: start;
+      transition: all 0.5s ease 0.2s;
+
    }
 
-   .nav-bar__list.menu-active {
+   .nav-bar.menu-activate > .nav-bar__list {
       overflow: hidden;
       left: 0vw;
+      transition: all 0.5s ease 0.2s;
    }
 
    .nav-bar__burger {
       display: flex;
    }
 
-   .nav-bar__burger.menu-active {
+   .nav-bar__burger.menu-activate {
       overflow: hidden;
    }
 
-   .nav-bar__burger.menu-active span {
+   .nav-bar.menu-activate > .nav-bar__burger span {
+      position: relative;
+      z-index: 6;
       background: #feddff;
    }
 
@@ -288,13 +322,9 @@
       line-height: 40px;
       text-align: left;
       align-items: start;
-      width: 100vw;
+      width: 100%;
       padding: 10px;
       background: #fff;
-   }
-
-   .block-header__row:first-child {
-      margin-bottom: 10px;
    }
 
    .block-header__group-items {
@@ -303,6 +333,7 @@
    }
 
    .block-header__search-input-block {
+      flex: 1 1 445px;
       margin: 0;
    }
 
@@ -334,9 +365,12 @@
    .block-header__group-items {
       height: 56px;
       border-bottom: 2px solid #eee;
+      border-left: 1px solid #eee;
    }
 
    .block-header__shopping {
+      position: relative;
+      z-index: 4;
       height: 56px;
       padding: 6px;
       margin: 0px;
@@ -347,6 +381,7 @@
 
    .block-header__type-list {
       display: flex;
+      width: 100%;
       overflow-x: scroll;
    }
 
@@ -376,51 +411,79 @@
 }
 
 @media (max-width: 536px) {
-   .block-header__logo {
+   .block-header__search-input-block {
+      flex: 1 1 auto ;
+   }
+   .block-header__search-input-block span {
+      display: inline-block;
+      position: absolute;
+      top: 50%;
+      left: 60px;
+      transform: translate(0px, -50%) rotate(0deg) scale(1) skew(0deg,0deg);
+      font-weight: 500;
+      letter-spacing: 0.1em;
+   }
+   .block-header__search {
+      /* display: none; */
+
+      min-width: auto;
+      width: 95%;
+      /* max-width: 100%; */
+      padding: 10px 0px 10px 14px;
+   }
+   .block-header__search-img{
+      /* width: 30px;
+      height: 30px;
+      left: 50%;
+      transform: translate(50%, -50%) rotate(0deg) scale(1) skew(0deg, 0deg); */
+      display: none;
+   }
+
+   /* .block-header__logo {
       position: absolute;
       top: 66px;
       left: 0;
       background: #fff;
       border: 0;
-   }
+   } */
 
-   .block-header__group-items {
+   /* .block-header__group-items {
       position: fixed;
       flex: 1 1 auto;
       margin: 0;
       background: #fff;
       z-index: 6;
-   }
+   } */
 
-   .nav-bar {
+   /* .nav-bar {
       position: fixed;
       left: 0;
       top: 0;
       background: #fff;
       z-index: 6;
-   }
+   } */
 
-   .block-header__shopping {
+   /* .block-header__shopping {
       position: fixed;
       right: 0;
       top: 0;
       background: #fff;
       z-index: 7;
-   }
+   } */
 
-   .block-header__row:first-child {
+   /* .block-header__row:first-child {
       position: relative;
       width: 100vw;
       background: #fff;
       margin: 0;
       padding: 0;
-   }
+   } */
 
-   .block-header__row:last-child {
+   /* .block-header__row:last-child {
       padding: 66px 0px 0px 0px;
-   }
+   } */
 
-   .block-header__row::after:first-child {
+   /* .block-header__row::after:first-child {
       content: '';
       width: 100vw;
       height: 56px;
@@ -428,16 +491,16 @@
       position: absolute;
       top: 0;
       left: 0;
-   }
+   } */
 
-   .block-header__search {
+   /* .block-header__search {
       min-width: none;
       z-index: 5;
       padding-left: 55px;
-   }
+   } */
 
-   .block-header__info-container {
+   /* .block-header__info-container {
       position: fixed;
       z-index: 10;
-   }
+   } */
 }
