--- a/src/pages/shopping_cart/style.css
+++ b/src/pages/shopping_cart/style.css
@@ -125,3 +125,11 @@
    margin: 0px auto;
 }
 
+.product-null{
+   font-size: 26px;
+   font-weight: 600;
+   color: rgb(139, 139, 139);
+   width: 100%;
+   height: 100%;
+   text-align: center;
+}
