--- a/src/components/slider/style.css
+++ b/src/components/slider/style.css
@@ -1,2 +1,35 @@
-@import url("https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.min.css");
-@import url("https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick-theme.min.css");
+/* @import url("https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.min.css"); */
+/* @import url("https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick-theme.min.css"); */
+
+.slick-list{
+   width: 100%;
+   overflow: hidden;
+}
+.slick-track{
+   display: flex;
+   /* width: 100%; */
+}
+.slick-slide{
+   flex: 0 0 395px;
+   margin-right: 20px;
+}
+.block-works__item {
+   /* max-width: 395px; */
+   /* max-height: 410px; */
+   /* width: 100px; */
+   flex: 0 0 395px;
+   margin-right: 28px;
+   gap: 10px;
+}
+
+.block-works__photo {
+   width: 100%;
+   height: 100%;
+}
+
+.block-works__img {
+   width: 395px;
+   height: 410px;
+   object-fit: cover;
+   border-radius: 25px;
+}
