--- a/src/pages/main/style.css
+++ b/src/pages/main/style.css
@@ -59,7 +59,7 @@
 .block-head__bg {
    position: absolute;
    display: flex;
-   justify-content: end;
+   justify-content: flex-end;
    z-index: 0;
    top: 0;
    right: 0;
@@ -113,7 +113,7 @@
 
 .block-leaders-of-sells__banner {
    display: flex;
-   justify-content: end;
+   justify-content: flex-end;
    width: 100%;
    height: 475px;
    position: relative;
@@ -125,7 +125,7 @@
    display: flex;
    flex-direction: column;
    justify-content: space-evenly;
-   align-items: end;
+   align-items: flex-end;
    background: linear-gradient(262.69deg, #ca4acb -0.43%, #f088f2 104.36%);
    flex: 1 1 100%;
    z-index: 3;
