--- a/src/index.css
+++ b/src/index.css
@@ -255,3 +255,13 @@ h6 {
 .wait-bg {
    color: #000;
 }
+.cap{
+   width: 100%;
+   text-align: center;
+   font-size: 28px;
+   font-weight: 600;
+   opacity: 0.5;
+   padding: 15vh 0px;
+   margin-bottom: 20px;
+   background: rgb(205, 199, 199);
+}
