--- a/src/components/filters/style.css
+++ b/src/components/filters/style.css
@@ -2,7 +2,9 @@
    margin: 20px 0px;
 }
 .sort-form__body{
-   display: flex;
+   display: inline-flex;
+   flex-wrap: wrap;
+   gap: 15px;
 }
 
 .sort-form__action{
@@ -98,7 +100,7 @@
 .sort-form__sort-by,
 .sort-form__price span{
    font-weight: 600;
-   font-size: 20px;
+   font-size: min(20px, 5vw);
    line-height: 26px;
    margin-right: 15px;
 }
